--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<version>5.11</version>
 		</dependency>
 		<dependency>
+			<groupId>org.uma.jmetal</groupId>
+			<artifactId>jmetal-problem</artifactId>
+			<version>5.11</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.2</version>
