--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.moeaframework</groupId>
 	<artifactId>jmetal-plugin</artifactId>
-	<version>6.0.0</version>
+	<version>6.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>JMetal Plugin for the MOEA Framework</name>
@@ -40,6 +40,7 @@
 			<groupId>org.moeaframework</groupId>
 			<artifactId>moeaframework</artifactId>
 			<version>3.5</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.uma.jmetal</groupId>
