--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
 				<configuration>
 					<shadedArtifactAttached>true</shadedArtifactAttached>
 					<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
 					<artifactSet>
 						<excludes>
 							<!-- exclude JUnit -->
@@ -146,7 +147,7 @@
 						<id>attach-sources</id>
 						<phase>deploy</phase>
 						<goals>
-							<goal>jar-no-fork</goal>
+							<goal>jar</goal>
 						</goals>
 					</execution>
 				</executions>
