--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ jobs:
         java: [ '19', '20', '21' ]
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
+      - name: Setup build
+        uses: MOEAFramework/.github/actions/setup-build@main
         with:
           java-version: ${{ matrix.java }}
-          distribution: zulu
-      - run: mvn test
+      - name: Run tests
+        run: mvn test
