--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -29,9 +29,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup release
-        uses: MOEAFramework/.github/actions/setup-release@main
+        uses: MOEAFramework/.github/actions/setup-build@main
         with:
           java-version: 19
+          setup-git: true
           email: ${{ secrets.EMAIL }}
           username: ${{ secrets.USERNAME }}
           github-token: ${{ secrets.PAT }}
